# queens

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .pylintrc  .pylintrc_ci  .pylintrc_ci_tests  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  TESTING.md  bitbucket-pipelines.yml  conftest.py  dev-requirements.in  dev-requirements.txt  driver.simg.REMOVED.git-id  environment-mambaforge-macos.yml  environment.yml  lic_strategy.ini  license_header.tmpl  parse_env_for_liccheck.sh  pyproject.toml  queens-environment.yml  requirements.in  requirements.txt  requirements.txt.orig  requirements_remote.txt  setup.cfg  setup.py  setup_remote.py  singularity_recipe  singularity_recipe.def
.eggs/pytest_runner-5.1-py3.7.egg/: ptr.py
.github/: pull_request_template.md  xml_summaries_to_md.py
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml
.github/workflows/: .github-ci.yml  build_documentation.yml  documentation.yml  tests_local.yml
.gitlab/: .gitlab-ci.yml
.gitlab/issue_templates/: ISSUE_TEMPLATE.md  MINIMAL_ISSUE.md  ONBOARDING.md  ONBOARDING_students.md
.gitlab/merge_request_templates/: MERGE_REQUEST_TEMPLATE.md
.gitlab/pipeline_utils/: .licenserc_template.yaml  code_quality_creator.py  create_licenserc.py  create_merge_request.sh  update_changelog.py
code_checks/: .git-blame-ignore-revs
code_checks/code_checks/: commit-msg  pre-commit
doc/: Makefile  README.md
doc/source/: architecture.rst  conf.py  index.rst  inheritance.rst  intro.rst  modules.rst  pqueens.randomfields.rst  pqueens.rst  tutorials.onboarding.rst  tutorials.rst
example_input_files/: ansys_plate_config.json  ansys_plate_config_new.json  baci_bo_test_config.json  baci_bruteforce.json  baci_config.json  baci_kaiser_config.json  baci_native_batt_trial_v2_config.json  baci_native_batt_trial_v2_restart_config.json  baci_native_config.json  baci_native_metropolis_hastings.json  baci_shape_lsq.json  borehole_morris_config.json  borehole_saltelli_config.json  branin_bayes_opt_config.json  branin_config.json  branin_gp_surrogate_config.json  ee_new_local.json  elementary_effect_invaaa.json  elementary_effect_invaaa_local.json  fencis_poisson_config.json  fencis_poisson_stopro_config.json  fenics_bruteforce.json  fsi_mc_bruteforce.json  fsi_mc_coarse_bruteforce.json  gardner2014a_bayes_opt_config.json  ishigami_morris_config.json  ishigami_morris_salib_config.json  ishigami_saltelli_config.json  ishigami_saltelli_new_config.json  ishigami_saltelli_salib_config.json  lhs_local_vectorized.json  mc_cylinder.json  mf_cylinder.json  mf_fsi_bruteforce.json  mf_fsi_example.json  microstructure_code_inverse_bbvi.json  microstructure_code_inverse_heating_lm.json  microstructure_code_inverse_lm.json  multi_fidelity_borehole_mc_config.json  rosenbrock_bayes_opt_config.json  (+5 more)
example_input_files/other_examples/: .directory  mc_mf_py_borehole.json  mf_joint_density_cylinder.json  opt_baci_local_shape.json  singularity_morris_baci_deep.json
example_input_files/output/: ee_invaaa.pickle  test.pickle  xxx.pickle
example_input_files/unclear/: mc_baci_local.json
example_input_files/working_examples/: .directory  mc_py_local_gardner2014a.json  morris_py_local_borehole.json  morris_py_local_ishigami.json  saltelli_py_local_borehole.json
example_simulator_functions/: branin_hifi.py
jupyter_notebooks/: init_queens_test.ipynb  init_queens_test_baci_native.ipynb  make_some_uq_plots.ipynb  reproduce_perdikaris2017.ipynb  reproduce_perdikaris2017_branin.ipynb
pqueens/: __init__.py  global_settings.py  main.py  pqueens.py  remote_main.py
pqueens/cluster/: __init__.py  slurm_cluster.py
pqueens/data_processor/: __init__.py  data_processor.py  data_processor_csv.py  data_processor_csv_data.py  data_processor_ensight.py  data_processor_ensight_interface.py  data_processor_numpy.py
pqueens/database/: __init__.py  abstractdb.py  database.py  dummydb.py  mongodb.py  sqlite.py
pqueens/designers/: abstract_designer.py  designer_factory.py  group_designer.py  lhs_designer.py  monte_carlo_designer.py  morris_campolongo_designer.py  pseudo_saltelli_designer.py  sobol_gratiet_designer.py  sobol_gratiet_designer_lhd.py  test_designers.py
pqueens/distributions/: __init__.py  bernoulli.py  beta.py  categorical.py  distributions.py  exponential.py  free.py  lognormal.py  mean_field_normal.py  mixture.py  multinomial.py  normal.py  particles.py  unbounded.py  uniform.py  uniform_discrete.py
pqueens/drivers/: __init__.py  ansys_driver.py  ansys_driver_native.py  baci_driver.py  baci_driver_bruteforce.py  baci_driver_deep.py  baci_driver_docker.py  baci_driver_native.py  baci_driver_native_new.py  baci_driver_schmarrn.py  dask_driver.py  dask_jobscript_driver.py  dask_mpi_driver.py  dealII_navierstokes_driver.py  driver.py  dummy_driver_baci_pbs_kaiser.py  fenics_driver_anaconda.py  fenics_driver_docker_new.py  gen_driver_local.py  jobscript_driver.py  mpi_driver.py  navierstokes_native.py  openfoam_driver.py  openfoam_driver_docker.py  python_driver_vector_interface.py  python_function_driver.py
pqueens/emulators/: gp_emulator.py  mf_icm_gp_emulator.py  mf_nargp_emulator.py
queens/: __init__.py  classification_function.py  global_settings.py  main.py
test_utils/: benchmarks.py  get_queens_example_from_readme.py  integration_tests.py
tests/: README.md  conftest.py  utils.py
trials/: ansys_plate_template.inp  post_post_script_EE.py  post_post_script_FSI.py  post_post_script_ansys_plate.py  post_post_script_assb_variance.py  post_post_script_biax_bo.py  post_post_script_biax_lsq.py  post_post_script_invaaa.py  test_Ishigami_GP.py  test_function_fenics_template.py  test_morris.py  test_morris_borehole.py  test_morris_ishigami.py  test_morris_sobol.py  test_sobol.py  test_sobol_borehole.py  test_sobol_ishigami.py  test_sobol_sobol.py  trial_designers.py  try_fenics_stopro_template.py  try_gp_emulator.py  try_mf_nargp_emulator.py  try_out_gpflowopt.py  try_out_jobscheduler.py  try_univariate_random_field_generators.py
utilities/: .git-blame-ignore-revs
(+1655 files in other folders)
